@@ -1,3 +1,7 @@
+2021-02-04 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Add info about additional fields being displayed as regular columns, resolves #154
+
 2021-02-02 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Improve validation of "children" property, resolves #147
